--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,13 +3,16 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+display: flex;
+  align-items: center;
+justify-content: center;
 }
 
 .box {
-  background: palevioletred;
+  background: rgb(197, 216, 112);
   font-weight: bold;
   text-align: center;
   border: 6px solid maroon;
   width: 80px;
-  height: 80px;
+  height: 80px
 }
