--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding: 10px;
+align-items: center;
+justify-content:space-evenly;
 }
 
 .logo {
@@ -14,7 +18,12 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+  margin: 0em;
+  padding: 0em;
 }
+
 
 a {
   font-size: 22px;
