--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,13 +6,24 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content:space-between;
 }
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 8px;
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -20,6 +31,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+
 }
 
 .logo {
@@ -27,6 +39,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  
 }
 
 button {
@@ -35,14 +48,20 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  gap: 16px;
 }
