--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-body {
+body {  
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+
+}
+.header, .footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 30px;
+}
+
+a {
+  text-decoration: none;
+color: grey;
+}
+
+.footer {
+  background-color: lightgray;
+  margin-top: auto;
+
+}
+
+.content { 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+ul {
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
 }
 
 img {
@@ -16,6 +49,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
